--- a/dissertation-game/dissertation-game.csproj
+++ b/dissertation-game/dissertation-game.csproj
@@ -12,13 +12,16 @@
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
-    <TargetFrameworkProfile></TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectGenerator>VSTU</UnityProjectGenerator>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>2017.3.1f1</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion>6</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
@@ -417,6 +420,9 @@
     <Compile Include="Assets\Scripts\Time\GameTimeManager.cs" />
     <Compile Include="Assets\Scripts\UI\LookAtCamera.cs" />
     <Compile Include="Assets\Scripts\UI\MainMenuController.cs" />
+    <Compile Include="Assets\Scripts\UI\Scoreboard\PlayerScoreController.cs" />
+    <Compile Include="Assets\Scripts\UI\Scoreboard\ScoreboardController.cs" />
+    <Compile Include="Assets\Scripts\UI\StaticColours.cs" />
     <Compile Include="Assets\Scripts\UI\UIFader.cs" />
     <Compile Include="Assets\Scripts\Weapons\Abstract\Weapon.cs" />
     <Compile Include="Assets\Scripts\Weapons\Concrete\Pistol.cs" />
