Added capture logging
Added logging of capture point captures. Added in a new GameInstanceData class to better facilitate this. Also changed the victory conditions from kills to the timer.

--- a/dissertation-game/dissertation-game.csproj
+++ b/dissertation-game/dissertation-game.csproj
@@ -382,6 +382,7 @@
     <Compile Include="Assets\Asset Store\Standard Assets\Utility\WaypointCircuit.cs" />
     <Compile Include="Assets\Asset Store\Standard Assets\Utility\WaypointProgressTracker.cs" />
     <Compile Include="Assets\Scripts\Data\DatabaseManager.cs" />
+    <Compile Include="Assets\Scripts\Data\GameInstanceData.cs" />
     <Compile Include="Assets\Scripts\Data\PlayerData.cs" />
     <Compile Include="Assets\Scripts\Environment\BorderTerrainController.cs" />
     <Compile Include="Assets\Scripts\Environment\CapturePointController.cs" />
