Added participant database
Added logging of participant data to a seperate database. Added encryption for participant data sent over the network.

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ dissertation-game/sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+# Databases
+dissertation-game/Assets/StreamingAssets/Database/*.db
